Bound native strings, fix critical leaf downcalls, rect layout fix  (#86)
* fix(ci): install Rosetta brew from tarball, install.sh dropped Intel

* Bound native strings, fix critical leaf downcalls, rect layout fix

* FIx the CI failures.

* Fix Cis (again)

* Fastlink should build plaindowncalls